--- a/portfolio.html
+++ b/portfolio.html
@@ -17,15 +17,34 @@
             </ul>
         </nav>
         <main>
-            <h1>Braxton's Portfolio</h1>
+            <h1>Portfolio</h1>
             <!-- Your content goes here -->
-            <img src = "images/avatar.png" />
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et sollicitudin ac orci phasellus egestas tellus. Sed faucibus turpis in eu mi bibendum neque. Facilisis gravida neque convallis a cras. Molestie ac feugiat sed lectus vestibulum mattis. Faucibus purus in massa tempor nec feugiat nisl pretium. Adipiscing at in tellus integer feugiat scelerisque. Sed adipiscing diam donec adipiscing tristique risus nec feugiat. Odio tempor orci dapibus ultrices in. Quis viverra nibh cras pulvinar mattis. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et. Duis at consectetur lorem donec massa sapien faucibus. Fermentum odio eu feugiat pretium. Sit amet luctus venenatis lectus magna fringilla urna porttitor. Tristique risus nec feugiat in. Diam maecenas ultricies mi eget mauris pharetra et ultrices. Purus viverra accumsan in nisl nisi scelerisque. Eget mi proin sed libero enim sed faucibus turpis in. Placerat duis ultricies lacus sed turpis tincidunt id aliquet.
-            </p>
-            <p>
-                Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim. Habitant morbi tristique senectus et. Laoreet non curabitur gravida arcu ac tortor. Amet dictum sit amet justo donec. Parturient montes nascetur ridiculus mus mauris vitae. In hendrerit gravida rutrum quisque non tellus. Arcu bibendum at varius vel. Tellus cras adipiscing enim eu turpis egestas pretium aenean pharetra. Tincidunt tortor aliquam nulla facilisi cras fermentum odio eu. Suspendisse sed nisi lacus sed viverra tellus. Est ultricies integer quis auctor elit sed. Viverra vitae congue eu consequat ac felis donec et. Faucibus ornare suspendisse sed nisi lacus sed viverra tellus. Sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Sollicitudin ac orci phasellus egestas tellus rutrum tellus pellentesque eu. Lacus sed viverra tellus in hac. Volutpat lacus laoreet non curabitur. Mi bibendum neque egestas congue quisque.
-            </p>
+            <ul>
+                <h2><a href = "#">2D N-Body Simulation</a></h2>
+                <img src = "images/portfolio.nbodysimulation.png" />
+                <p>
+                    Gravity simulation of objects in a plane.
+                </p>
+
+                <h2><a href = "#">Multicycle Load/Store Architecture Processor </a></h2>
+                <img src = "images/portfolio.processor.png" />
+                <p>
+                    Design for a load/store architecture processor, assembler, and compiler, which runs the a program that calculates relative primes. 
+                </p>
+
+                <h2><a href = "#">Monospace ASACII Art Generator</a></h2>
+                <img src = "images/portfolio.monoascii.png" />
+                <p>
+                    Generates text from a monospace font to display an image. 
+                </p>
+
+                <h2><a href = "#">Non-Monospace ASACII Art Generator</a></h2>
+                <img src = "images/portfolio.nonmonoascii.png" />
+                <p>
+                    Generates text from a non-monospace font to display an image. 
+                </p>
+                
+            </ul>
         </main>
         <footer>
             You can email at: leebt@rose-hulman.edu
