--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </p>
         </main>
         <footer>
-            You can email at: leebt@rose-hulman.edu
+            You can email me at: leebt@rose-hulman.edu
         </footer>
 
         <script src="scripts/main.js"></script>
