--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
             </ul>
         </main>
         <footer>
-            You can email at: leebt@rose-hulman.edu
+            You can me email at: leebt@rose-hulman.edu
         </footer>
 
         <script src="scripts/main.js"></script>
