finished with part 2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <link rel="icon" href="images/favicon.png" />
     </head>
     <body id = "about">
+        <header>
+            <h1>About</h1>
+        </header>
         <nav>
             <ul>
                 <li><a href = "index.html">About</a></li>
@@ -19,12 +22,15 @@
         <main>
             <h1>Braxton's Portfolio</h1>
             <!-- Your content goes here -->
-            <img src = "images/avatar.png" />
+            <img id="avatar" src = "images/avatar.JPG" />
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et sollicitudin ac orci phasellus egestas tellus. Sed faucibus turpis in eu mi bibendum neque. Facilisis gravida neque convallis a cras. Molestie ac feugiat sed lectus vestibulum mattis. Faucibus purus in massa tempor nec feugiat nisl pretium. Adipiscing at in tellus integer feugiat scelerisque. Sed adipiscing diam donec adipiscing tristique risus nec feugiat. Odio tempor orci dapibus ultrices in. Quis viverra nibh cras pulvinar mattis. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et. Duis at consectetur lorem donec massa sapien faucibus. Fermentum odio eu feugiat pretium. Sit amet luctus venenatis lectus magna fringilla urna porttitor. Tristique risus nec feugiat in. Diam maecenas ultricies mi eget mauris pharetra et ultrices. Purus viverra accumsan in nisl nisi scelerisque. Eget mi proin sed libero enim sed faucibus turpis in. Placerat duis ultricies lacus sed turpis tincidunt id aliquet.
-            </p>
+                My name is Braxton Lee, and I am a sophmore Conputer Science major at Rose-Hulman Institute of Technology
+                in Terre Haute, IN. My hometown is Honolulu, HI, where I went to `Iolani School.
+                The goal of this website is to teach you a little more about myself, my projects, and my hobbies.
             <p>
-                Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim. Habitant morbi tristique senectus et. Laoreet non curabitur gravida arcu ac tortor. Amet dictum sit amet justo donec. Parturient montes nascetur ridiculus mus mauris vitae. In hendrerit gravida rutrum quisque non tellus. Arcu bibendum at varius vel. Tellus cras adipiscing enim eu turpis egestas pretium aenean pharetra. Tincidunt tortor aliquam nulla facilisi cras fermentum odio eu. Suspendisse sed nisi lacus sed viverra tellus. Est ultricies integer quis auctor elit sed. Viverra vitae congue eu consequat ac felis donec et. Faucibus ornare suspendisse sed nisi lacus sed viverra tellus. Sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Sollicitudin ac orci phasellus egestas tellus rutrum tellus pellentesque eu. Lacus sed viverra tellus in hac. Volutpat lacus laoreet non curabitur. Mi bibendum neque egestas congue quisque.
+                When I'm not doing schoolwork, by farovite things to do are to either get outside and enjoy nature through hiking or
+                spending time at the ocean, or by making my own small programming projects. Like most other students my age, I also enjoy
+                video games, usually of the racing variety.
             </p>
         </main>
         <footer>
