--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,10 @@
         <link rel="stylesheet" href="styles/main.css" />
         <link rel="icon" href="images/favicon.png" />
     </head>
-    <body id = "about">
+    <body id = "portfolio">
+        <header>
+            <h1>Portfolio</h1>
+        </header>
         <nav>
             <ul>
                 <li><a href = "index.html">About</a></li>
@@ -19,30 +22,39 @@
         <main>
             <h1>Portfolio</h1>
             <!-- Your content goes here -->
-            <ul>
-                <h2><a href = "#">2D N-Body Simulation</a></h2>
-                <img src = "images/portfolio.nbodysimulation.png" />
-                <p>
-                    Gravity simulation of objects in a plane.
-                </p>
+            <img id="avatar" src = "images/avatar.JPG" />
+            <ul id="portfolioItems">
+                <li>
+                    <h2><a href = "#">2D N-Body Simulation</a></h2>
+                    <img src = "images/portfolio.nbodysimulation.png" />
+                    <p>
+                        Gravity simulation of objects in a plane.
+                    </p>
+                </li>
 
-                <h2><a href = "#">Multicycle Load/Store Architecture Processor </a></h2>
-                <img src = "images/portfolio.processor.png" />
-                <p>
-                    Design for a load/store architecture processor, assembler, and compiler, which runs the a program that calculates relative primes. 
-                </p>
+                <li>
+                    <h2><a href = "#">Multicycle Load/Store Architecture Processor </a></h2>
+                    <img src = "images/portfolio.processor.png" />
+                    <p>
+                        Design for a load/store architecture processor, assembler, and compiler, which runs the a program that calculates relative primes. 
+                    </p>
+                </li>
 
-                <h2><a href = "#">Monospace ASACII Art Generator</a></h2>
-                <img src = "images/portfolio.monoascii.png" />
-                <p>
-                    Generates text from a monospace font to display an image. 
-                </p>
+                <li>
+                    <h2><a href = "#">Monospace ASACII Art Generator</a></h2>
+                    <img src = "images/portfolio.monoascii.png" />
+                    <p>
+                        Generates text from a monospace font to display an image. 
+                    </p>
+                </li>
 
-                <h2><a href = "#">Non-Monospace ASACII Art Generator</a></h2>
-                <img src = "images/portfolio.nonmonoascii.png" />
-                <p>
-                    Generates text from a non-monospace font to display an image. 
-                </p>
+                <li>
+                    <h2><a href = "#">Non-Monospace ASACII Art Generator</a></h2>
+                    <img src = "images/portfolio.nonmonoascii.png" />
+                    <p>
+                        Generates text from a non-monospace font to display an image. 
+                    </p>
+                </li>
                 
             </ul>
         </main>
