--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,10 @@
         <link rel="stylesheet" href="styles/main.css" />
         <link rel="icon" href="images/favicon.png" />
     </head>
-    <body id = "about">
+    <body id = "resume">
+        <header>
+            <h1>Resume</h1>
+        </header>
         <nav>
             <ul>
                 <li><a href = "index.html">About</a></li>
