added portfolio images

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,17 @@
             <ul id="portfolioItems">
                 <li>
                     <h2><a href = "#">2D N-Body Simulation</a></h2>
-                    <img src = "images/portfolio.nbodysimulation.png" />
+                    <img src = "images/nbodysimulation.png" />
                     <p>
                         Gravity simulation of objects in a plane.
+                    </p>
+                </li>
+
+                <li>
+                    <h2><a href = "#">Monospace ASACII Art Generator</a></h2>
+                    <img src = "images/monoascii.png" />
+                    <p>
+                        Generates text from a monospace font to display an image. 
                     </p>
                 </li>
 
@@ -37,14 +45,6 @@
                     <img src = "images/portfolio.processor.png" />
                     <p>
                         Design for a load/store architecture processor, assembler, and compiler, which runs the a program that calculates relative primes. 
-                    </p>
-                </li>
-
-                <li>
-                    <h2><a href = "#">Monospace ASACII Art Generator</a></h2>
-                    <img src = "images/portfolio.monoascii.png" />
-                    <p>
-                        Generates text from a monospace font to display an image. 
                     </p>
                 </li>
 
