--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     </head>
     <body id = "portfolio">
         <header>
-            <h1>Portfolio</h1>
+            <h1 id="pageName">Braxton's Website</h1>
         </header>
         <nav>
             <ul>
@@ -19,10 +19,10 @@
                 <li><a href = "resume.html">Resume</a></li>
             </ul>
         </nav>
+
         <main>
             <h1>Portfolio</h1>
             <!-- Your content goes here -->
-            <img id="avatar" src = "images/avatar.JPG" />
             <ul id="portfolioItems">
                 <li>
                     <h2><a href = "#">2D N-Body Simulation</a></h2>
@@ -42,7 +42,7 @@
 
                 <li>
                     <h2><a href = "#">Multicycle Load/Store Architecture Processor </a></h2>
-                    <img src = "images/portfolio.processor.png" />
+                    <img src = "images/processor.png" />
                     <p>
                         Design for a load/store architecture processor, assembler, and compiler, which runs the a program that calculates relative primes. 
                     </p>
@@ -50,7 +50,7 @@
 
                 <li>
                     <h2><a href = "#">Non-Monospace ASACII Art Generator</a></h2>
-                    <img src = "images/portfolio.nonmonoascii.png" />
+                    <img src = "images/nonmonoascii.png" />
                     <p>
                         Generates text from a non-monospace font to display an image. 
                     </p>
