--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     </head>
     <body id = "resume">
         <header>
-            <h1>Resume</h1>
+            <h1 id="pageName">Braxton's Website</h1>
         </header>
         <nav>
             <ul>
@@ -20,7 +20,7 @@
             </ul>
         </nav>
         <main>
-            <h1>Resume</h1>
+            
             <!-- Your content goes here -->
             <table>
                 <tr>
