--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body id = "about">
         <header>
-            <h1>About</h1>
+            <h1 id="pageName">Braxton's Website</h1>
         </header>
         <nav>
             <ul>
@@ -19,8 +19,9 @@
                 <li><a href = "resume.html">Resume</a></li>
             </ul>
         </nav>
+        
         <main>
-            <h1>Braxton's Portfolio</h1>
+            <h1>About</h1>
             <!-- Your content goes here -->
             <img id="avatar" src = "images/avatar.JPG" />
             <p>
