--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <main>
             <h1>About</h1>
             <!-- Your content goes here -->
-            <img id="avatar" src = "images/avatar.JPG" />
+            <img id="avatar" src = "images/avatar.JPG" alt="Picture of me"/>
             <p>
                 My name is Braxton Lee, and I am a sophmore Conputer Science major at Rose-Hulman Institute of Technology
                 in Terre Haute, IN. My hometown is Honolulu, HI, where I went to `Iolani School.
