--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <ul id="portfolioItems">
                 <li>
                     <h2><a href = "#">2D N-Body Simulation</a></h2>
-                    <img src = "images/nbodysimulation.png" />
+                    <img src = "images/nbodysimulation.png" alt="Picture of simulation"/>
                     <p>
                         Gravity simulation of objects in a plane.
                     </p>
@@ -34,7 +34,7 @@
 
                 <li>
                     <h2><a href = "#">Monospace ASACII Art Generator</a></h2>
-                    <img src = "images/monoascii.png" />
+                    <img src = "images/monoascii.png" alt="Picture of art"/>
                     <p>
                         Generates text from a monospace font to display an image. 
                     </p>
@@ -42,7 +42,7 @@
 
                 <li>
                     <h2><a href = "#">Multicycle Load/Store Architecture Processor </a></h2>
-                    <img src = "images/processor.png" />
+                    <img src = "images/processor.png" alt="Picture of processor"/>
                     <p>
                         Design for a load/store architecture processor, assembler, and compiler, which runs the a program that calculates relative primes. 
                     </p>
@@ -50,7 +50,7 @@
 
                 <li>
                     <h2><a href = "#">Non-Monospace ASACII Art Generator</a></h2>
-                    <img src = "images/nonmonoascii.png" />
+                    <img src = "images/nonmonoascii.png" alt="Picture of art"/>
                     <p>
                         Generates text from a non-monospace font to display an image. 
                     </p>
